[tool.poetry]
name = "geofaker"
version = "0.1.0"
description = "generate fake geospatial data in Python"
authors = ["John Millsap"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
